Add zbus nodes for rover and initial attitude est
Added imu, mag, and wheel odometry zbus driver interfaces nodes.

Renamed ina zbus driver interface to power.

Added rover2d estimator using wheel odometry. Still needs to listen
to the steering angle and attach casadi functions.

Attitude estimator for multirotor running, but requires further debugging.

Closes #83, Closes #82, Closes #81, Closes #80, Closes #17

Signed-off-by: James Goppert <james.goppert@gmail.com>
Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Co-authored-by: Peter van der Perk <peter.vanderperk@nxp.com>
Co-authored-by: Tom Burdick <thomas.burdick@intel.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -21,6 +21,8 @@ CONFIG_SYNAPSE_PROTOBUF=y
 
 CONFIG_CONTROL_ACKERMANN=y
 
+CONFIG_ESTIMATE_ATTITUDE=y
+
 # General config
 CONFIG_POSIX_API=y
 CONFIG_NEWLIB_LIBC=y
