--- a/app/mrbuggy3/boards/mimxrt1170_fmurt7.conf
+++ b/app/mrbuggy3/boards/mimxrt1170_fmurt7.conf
@@ -1,5 +1,5 @@
 CONFIG_DREAM_SITL=n
-CONFIG_ACTUATE_PWM=y
+CONFIG_ACTUATE_PWM=n  # disabling for estimator testing
 CONFIG_ACTUATE_PWM_NUMBER=3
 
 # can
@@ -51,9 +51,8 @@ CONFIG_CAN_FD_MODE=y
 CONFIG_SHELL_ARGC_MAX=72
 CONFIG_I2C=y
 CONFIG_SENSOR=y
-CONFIG_SENSE_INA226=y
+CONFIG_SENSE_POWER=y
 CONFIG_SENSE_UBX_GNSS=y
-
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 
 # Debugging
@@ -61,6 +60,6 @@ CONFIG_DEBUG_THREAD_INFO=y
 
 # Logging
 CONFIG_LOG=y
-CONFIG_LOG_MODE_DEFERRED=y
-CONFIG_LOG_BACKEND_NET=y
+CONFIG_LOG_MODE_DEFERRED=n
+CONFIG_LOG_BACKEND_NET=n
 CONFIG_LOG_BACKEND_NET_SERVER="192.0.2.2"
