--- a/app/mrbuggy3/boards/native_posix.conf
+++ b/app/mrbuggy3/boards/native_posix.conf
@@ -9,6 +9,12 @@ CONFIG_DREAM_SITL=y
 CONFIG_SYNAPSE_ETHERNET=y
 CONFIG_SYNAPSE_UART=n
 
+# turn off driver interfaces, handled by dream
+CONFIG_SENSE_IMU=n
+CONFIG_SENSE_MAG=n
+CONFIG_SENSE_POWER=n
+CONFIG_SENSE_WHEEL_ODOMETRY=n
+
 CONFIG_NEWLIB_LIBC=n
 CONFIG_EXTERNAL_LIBC=y
 CONFIG_POSIX_API=n
