--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -22,7 +22,24 @@ CONFIG_SYNAPSE_PROTOBUF=y
 
 CONFIG_CONTROL_ACKERMANN=y
 
-CONFIG_ESTIMATE_IEKF=y
+
+CONFIG_ESTIMATE_ROVER2D=y
+CONFIG_ESTIMATE_ROVER2D_LOG_LEVEL_DBG=n
+
+CONFIG_ESTIMATE_ATTITUDE=n
+CONFIG_ESTIMATE_ATTITUDE_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_IMU=y
+CONFIG_SENSE_IMU_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_MAG=y
+CONFIG_SENSE_MAG_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_POWER=y
+CONFIG_SENSE_POWER_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_WHEEL_ODOMETRY=y
+CONFIG_SENSE_WHEEL_ODOMETRY_LOG_LEVEL_DBG=n
 
 # General config
 CONFIG_POSIX_API=y
