--- a/drivers/actuate/vesc_can/Kconfig
+++ b/drivers/actuate/vesc_can/Kconfig
@@ -2,3 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 rsource "../../synapse/vesc_can/Kconfig"
+
+module = ACTUATE_VESC_CAN
+module-str = actuate_vesc_can
+source "subsys/logging/Kconfig.template.log_config"
