--- a/drivers/sense/mag/CMakeLists.txt
+++ b/drivers/sense/mag/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(sense_ina226)
+zephyr_library_named(mag)
 
 
 # we need to be able to include generated header files
@@ -11,4 +11,4 @@ zephyr_library_sources(
   main.c
   )
 
-add_dependencies(sense_ina226 synapse_protobuf)
+add_dependencies(mag synapse_protobuf)
