--- a/lib/control/diffdrive/Kconfig
+++ b/lib/control/diffdrive/Kconfig
@@ -5,3 +5,7 @@ config CONTROL_DIFFDRIVE
   bool "rover diffdrive control lib"
   help
     This option enables the rover diffdrive lib.
+
+module = CONTROL_DIFFDRIVE
+module-str = control_diffdrive
+source "subsys/logging/Kconfig.template.log_config"
