--- a/drivers/sense/CMakeLists.txt
+++ b/drivers/sense/CMakeLists.txt
@@ -1,5 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
-add_subdirectory_ifdef(CONFIG_SYNAPSE_VESC_CAN_STATUS vesc_can_status)
-add_subdirectory_ifdef(CONFIG_SENSE_INA226 ina226)
+add_subdirectory_ifdef(CONFIG_SENSE_IMU imu)
+add_subdirectory_ifdef(CONFIG_SENSE_MAG mag)
+add_subdirectory_ifdef(CONFIG_SENSE_WHEEL_ODOMETRY wheel_odometry)
+add_subdirectory_ifdef(CONFIG_SENSE_POWER power)
 add_subdirectory_ifdef(CONFIG_SENSE_UBX_GNSS ubx_gnss)
+add_subdirectory_ifdef(CONFIG_SYNAPSE_VESC_CAN_STATUS vesc_can_status)
