--- a/lib/estimate/CMakeLists.txt
+++ b/lib/estimate/CMakeLists.txt
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
-add_subdirectory_ifdef(CONFIG_ESTIMATE_IEKF iekf)
+add_subdirectory_ifdef(CONFIG_ESTIMATE_ATTITUDE attitude)
+add_subdirectory_ifdef(CONFIG_ESTIMATE_ROVER2D rover2d)
