--- a/lib/estimate/attitude/CMakeLists.txt
+++ b/lib/estimate/attitude/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(estimate_iekf)
+zephyr_library_named(estimate_attitude)
 
 
 # we need to be able to include generated header files
@@ -9,6 +9,7 @@ zephyr_include_directories()
 
 zephyr_library_sources(
   main.c
+  casadi/casadi_mrp.c
   )
 
-add_dependencies(estimate_iekf synapse_protobuf)
+add_dependencies(estimate_attitude synapse_protobuf)
