--- a/app/mrbuggy3/boards/native_posix.conf
+++ b/app/mrbuggy3/boards/native_posix.conf
@@ -1,1 +1,21 @@
-../../common/boards/native_posix.conf
+CONFIG_ETH_NATIVE_POSIX=y
+CONFIG_TEST_RANDOM_GENERATOR=y
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
+CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
+
+CONFIG_UART_NATIVE_POSIX_PORT_1_ENABLE=n
+
+CONFIG_DREAM_SITL=y
+CONFIG_SYNAPSE_ETHERNET=y
+CONFIG_SYNAPSE_UART=n
+
+# turn off driver interfaces, handled by dream
+CONFIG_SENSE_IMU=n
+CONFIG_SENSE_MAG=n
+CONFIG_SENSE_POWER=n
+CONFIG_SENSE_WHEEL_ODOMETRY=n
+
+CONFIG_NEWLIB_LIBC=n
+CONFIG_EXTERNAL_LIBC=y
+CONFIG_POSIX_API=n
+CONFIG_POSIX_CLOCK=y
