hardware: add rddrone.
Add initial support for rddrone.

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/rddrone/sample.yaml
+++ b/app/rddrone/sample.yaml
@@ -1,10 +1,10 @@
 sample:
-  description: ELM4
-  name: ELM4
+  description: RDDRONE
+  name: RDDRONE
 common:
   build_only: true
   integration_platforms:
     - native_posix
     - mimxrt1170_fmurt7
 tests:
-  elm4.default: {}
+  rddrone.default: {}
