--- a/app/elm4/boards/mimxrt1170_fmurt7.conf
+++ b/app/elm4/boards/mimxrt1170_fmurt7.conf
@@ -52,3 +52,15 @@ CONFIG_SHELL_ARGC_MAX=72
 CONFIG_I2C=y
 CONFIG_SENSOR=y
 CONFIG_SENSE_INA226=y
+CONFIG_SENSE_UBX_GNSS=y
+
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+
+# Debugging
+CONFIG_DEBUG_THREAD_INFO=y
+
+# Logging
+CONFIG_LOG=y
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_BACKEND_NET=y
+CONFIG_LOG_BACKEND_NET_SERVER="192.0.2.2"
