Reorganization of Kconfig and driver interfaces.
Moved zbus driver interfaces to lib.

Use Kconfig best practices with menuconfig.

Reduced stack sizes.

Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/boards/mimxrt1170_fmurt7.conf
+++ b/app/mrbuggy3/boards/mimxrt1170_fmurt7.conf
@@ -1,5 +1,5 @@
 CONFIG_DREAM_SITL=n
-CONFIG_ACTUATE_PWM=n  # disabling for estimator testing
+CONFIG_ACTUATE_PWM=n
 CONFIG_ACTUATE_PWM_NUMBER=3
 
 # can
