--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
+add_subdirectory(actuate)
 add_subdirectory(control)
+add_subdirectory(dream)
 add_subdirectory(estimate)
+add_subdirectory(sense)
+add_subdirectory(synapse)
