--- a/lib/estimate/rover2d/Kconfig
+++ b/lib/estimate/rover2d/Kconfig
@@ -1,12 +1,16 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-config ESTIMATE_ROVER2D
-  bool "Enable rover2d estimator"
+menuconfig ESTIMATE_ROVER2D
+  bool "rover2d"
   default n
   help
     This option enables the rover2d estimator
 
+if ESTIMATE_ROVER2D
+
 module = ESTIMATE_ROVER2D
 module-str = estimate_rover2d
 source "subsys/logging/Kconfig.template.log_config"
+
+endif # ESTIMATE_ROVER2D
