--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -3,7 +3,11 @@
 
 menu "Libraries"
 
+rsource "actuate/Kconfig"
 rsource "control/Kconfig"
+rsource "dream/Kconfig"
 rsource "estimate/Kconfig"
+rsource "sense/Kconfig"
+rsource "synapse/Kconfig"
 
 endmenu
