--- a/lib/control/diffdrive/Kconfig
+++ b/lib/control/diffdrive/Kconfig
@@ -1,11 +1,15 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-config CONTROL_DIFFDRIVE
-  bool "rover diffdrive control lib"
+menuconfig CONTROL_DIFFDRIVE
+  bool "diffdrive"
   help
     This option enables the rover diffdrive lib.
+
+if CONTROL_DIFFDRIVE
 
 module = CONTROL_DIFFDRIVE
 module-str = control_diffdrive
 source "subsys/logging/Kconfig.template.log_config"
+
+endif # CONTROL_DIFFDRIVE
