board: vmu_rt1170 change name to correct board.
Changed old board name to correct board name.

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/sample.yaml
+++ b/app/mrbuggy3/sample.yaml
@@ -5,6 +5,6 @@ common:
   build_only: true
   integration_platforms:
     - native_posix
-    - mimxrt1170_fmurt7
+    - vmu_rt1170
 tests:
   mrbuggy3.default: {}
