Implements zbus topic hz/info/echo, improve sched.
This schedules a listener once to echo the topic.
Autocomplete works on the zephyr shell for topics.
Also adds topic info and hz commmands.

While checking topic hz, found scheduling issues
and resolved using work queues. Switched estimator
and control to polling.

Remove synapse uart node.

Closes #93, Closes #96, Closes #97, Closes #98
Closes #99, Closes #100

Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -4,9 +4,12 @@ CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
 CONFIG_LOG=y
-CONFIG_LOG_MODE_MINIMAL=y
+CONFIG_LOG_MODE_MINIMAL=n
 CONFIG_BOOT_BANNER=y
 CONFIG_MAIN_THREAD_PRIORITY=5
+
+CONFIG_SYSTEM_WORKQUEUE_PRIORITY=-2
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=100000
 
 CONFIG_ZBUS=y
 CONFIG_ZBUS_LOG_LEVEL_INF=y
@@ -15,7 +18,7 @@ CONFIG_ZBUS_OBSERVER_NAME=y
 CONFIG_ZBUS_STRUCTS_ITERABLE_ACCESS=y
 
 CONFIG_SYNAPSE_ZBUS=y
-CONFIG_SYNAPSE_UART=y
+CONFIG_SYNAPSE_TOPIC=y
 CONFIG_SYNAPSE_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
@@ -34,6 +37,9 @@ CONFIG_SENSE_IMU_LOG_LEVEL_DBG=n
 
 CONFIG_SENSE_MAG=y
 CONFIG_SENSE_MAG_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_BARO=n
+CONFIG_SENSE_BARO_LOG_LEVEL_DBG=n
 
 CONFIG_SENSE_POWER=y
 CONFIG_SENSE_POWER_LOG_LEVEL_DBG=n
