--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 add_subdirectory(actuate)
 add_subdirectory(control)
+add_subdirectory(core)
 add_subdirectory(dream)
 add_subdirectory(estimate)
 add_subdirectory(sense)
