--- a/lib/sense/CMakeLists.txt
+++ b/lib/sense/CMakeLists.txt
@@ -1,8 +1,9 @@
 # SPDX-License-Identifier: Apache-2.0
 
+add_subdirectory_ifdef(CONFIG_SENSE_BARO baro)
 add_subdirectory_ifdef(CONFIG_SENSE_IMU imu)
 add_subdirectory_ifdef(CONFIG_SENSE_MAG mag)
-add_subdirectory_ifdef(CONFIG_SENSE_WHEEL_ODOMETRY wheel_odometry)
 add_subdirectory_ifdef(CONFIG_SENSE_POWER power)
 add_subdirectory_ifdef(CONFIG_SENSE_UBX_GNSS ubx_gnss)
+add_subdirectory_ifdef(CONFIG_SENSE_WHEEL_ODOMETRY wheel_odometry)
 add_subdirectory_ifdef(CONFIG_SYNAPSE_VESC_CAN_STATUS vesc_can_status)
