--- a/lib/synapse/topic/CMakeLists.txt
+++ b/lib/synapse/topic/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(synapse_uart)
+zephyr_library_named(synapse_topic)
 
 # we need to be able to include generated header files
 zephyr_include_directories()
@@ -10,4 +10,4 @@ zephyr_library_sources(
   main.c
   )
 
-add_dependencies(synapse_uart synapse_protobuf)
+add_dependencies(synapse_topic synapse_zbus)
