--- a/lib/core/workqueues/CMakeLists.txt
+++ b/lib/core/workqueues/CMakeLists.txt
@@ -1,13 +1,12 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(synapse_zbus)
+zephyr_library_named(core_workqueues)
+
 
 # we need to be able to include generated header files
 zephyr_include_directories()
 
 zephyr_library_sources(
-  channels.c
+  main.c
   )
-
-add_dependencies(synapse_zbus synapse_protobuf)
