--- a/lib/synapse/Kconfig
+++ b/lib/synapse/Kconfig
@@ -4,7 +4,7 @@
 menu "Synapse"
 
 rsource "ethernet/Kconfig"
-rsource "uart/Kconfig"
+rsource "topic/Kconfig"
 rsource "vesc_can/Kconfig"
 rsource "zbus/Kconfig"
 
