Implements zbus topic hz/info/echo, improve sched.
This schedules a listener once to echo the topic.
Autocomplete works on the zephyr shell for topics.
Also adds topic info and hz commmands.

While checking topic hz, found scheduling issues
and resolved using work queues. Switched estimator
and control to polling.

Remove synapse uart node.

Closes #93, Closes #96, Closes #97, Closes #98
Closes #99, Closes #100

Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/sense/baro/CMakeLists.txt
+++ b/lib/sense/baro/CMakeLists.txt
@@ -1,14 +1,14 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(synapse_zbus)
+zephyr_library_named(baro)
+
 
 # we need to be able to include generated header files
 zephyr_include_directories()
 
 zephyr_library_sources(
-  syn_pub_sub.c
-  channels.c
+  main.c
   )
 
-add_dependencies(synapse_zbus synapse_protobuf)
+add_dependencies(baro synapse_protobuf)
