PWM in nanosec and actuators control for ENB line.
Allows for setting PWM in nanoseconds and adds normalized
actuator message to control the the motor ENB line.

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/boards/vmu_rt1170.conf
+++ b/app/mrbuggy3/boards/vmu_rt1170.conf
@@ -1,22 +1,8 @@
 CONFIG_DREAM_SITL=n
-CONFIG_ACTUATE_PWM=n
+CONFIG_ACTUATE_PWM=y
 CONFIG_ACTUATE_PWM_NUMBER=3
 
-# can
-CONFIG_VESC_CAN=y
-CONFIG_ACTUATE_VESC_CAN=y
-CONFIG_VESC_CAN_NUMBER=1
-CONFIG_VESC_CAN_BUS_FD_0=y
-#CONFIG_VESC_CAN_BUS_FD_1=y
-CONFIG_VESC_CAN_BUS_ALIAS_CAN_N_0=0
-#CONFIG_VESC_CAN_BUS_ALIAS_CAN_N_1=0
-CONFIG_VESC_CAN_ID_0=60
-#CONFIG_VESC_CAN_ID_1=61
-CONFIG_VESC_POLE_PAIR_0=7
-#CONFIG_VESC_POLE_PAIR_1=7
-CONFIG_VESC_CAN_ACTUATOR_VEL_IDX_0=0
-#CONFIG_VESC_CAN_ACTUATOR_VEL_IDX_0=1
-
+CONFIG_BUGGY3_MOTOR_ENB_REQUIRED=y
 
 # steering
 CONFIG_ACTUATE_PWM_USE_POS_0=y
@@ -24,15 +10,28 @@ CONFIG_ACTUATE_PWM_INDEX_0=0
 CONFIG_ACTUATE_PWM_LINEAR_0=y
 CONFIG_ACTUATE_PWM_LINEAR_M_0=400
 CONFIG_ACTUATE_PWM_LINEAR_M_DIV_0=1
-CONFIG_ACTUATE_PWM_LINEAR_C_0=1500
-CONFIG_ACTUATE_PWM_LINEAR_C_DIV_0=1
+CONFIG_ACTUATE_PWM_LINEAR_B_0=1500
+CONFIG_ACTUATE_PWM_LINEAR_B_DIV_0=1
+
+# motor enable
+CONFIG_ACTUATE_PWM_INDEX_1=0
+CONFIG_ACTUATE_PWM_USE_NANO_SECONDS_1=y
+CONFIG_ACTUATE_PWM_PULSE_MIN_1=0
+CONFIG_ACTUATE_PWM_PULSE_MAX_1=50000
+CONFIG_ACTUATE_PWM_PULSE_CENTER_1=25000
+
 
 # throttle
-CONFIG_ACTUATE_PWM_INDEX_1=0
-CONFIG_ACTUATE_PWM_LINEAR_1=y
-CONFIG_ACTUATE_PWM_LINEAR_M_1=1000
-CONFIG_ACTUATE_PWM_LINEAR_C_1=1550
-CONFIG_ACTUATE_PWM_LINEAR_C_DIV_1=1
+CONFIG_ACTUATE_PWM_INDEX_2=0
+CONFIG_ACTUATE_PWM_USE_NANO_SECONDS_2=y
+CONFIG_ACTUATE_PWM_PULSE_MIN_2=0
+CONFIG_ACTUATE_PWM_PULSE_MAX_2=50000
+CONFIG_ACTUATE_PWM_PULSE_CENTER_2=25000
+CONFIG_ACTUATE_PWM_LINEAR_2=y
+CONFIG_ACTUATE_PWM_LINEAR_M_2=273158
+CONFIG_ACTUATE_PWM_LINEAR_M_DIV_2=1000
+CONFIG_ACTUATE_PWM_LINEAR_B_2=248474
+CONFIG_ACTUATE_PWM_LINEAR_B_DIV_2=10
 
 CONFIG_PWM=y
 
