--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -4,9 +4,12 @@ CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_NANOPB=y
 CONFIG_LOG=y
-CONFIG_LOG_MODE_MINIMAL=y
+CONFIG_LOG_MODE_MINIMAL=n
 CONFIG_BOOT_BANNER=y
 CONFIG_MAIN_THREAD_PRIORITY=5
+
+CONFIG_SYSTEM_WORKQUEUE_PRIORITY=-2
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=100000
 
 CONFIG_ZBUS=y
 CONFIG_ZBUS_LOG_LEVEL_INF=y
@@ -14,13 +17,34 @@ CONFIG_ZBUS_CHANNEL_NAME=y
 CONFIG_ZBUS_OBSERVER_NAME=y
 
 CONFIG_SYNAPSE_ZBUS=y
+CONFIG_SYNAPSE_TOPIC=y
 CONFIG_SYNAPSE_ETHERNET=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 
 CONFIG_CONTROL_ACKERMANN=y
 
-CONFIG_ESTIMATE_ATTITUDE=y
+
+CONFIG_ESTIMATE_ROVER2D=y
+CONFIG_ESTIMATE_ROVER2D_LOG_LEVEL_DBG=n
+
+CONFIG_ESTIMATE_ATTITUDE=n
+CONFIG_ESTIMATE_ATTITUDE_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_IMU=y
+CONFIG_SENSE_IMU_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_MAG=y
+CONFIG_SENSE_MAG_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_BARO=n
+CONFIG_SENSE_BARO_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_POWER=y
+CONFIG_SENSE_POWER_LOG_LEVEL_DBG=n
+
+CONFIG_SENSE_WHEEL_ODOMETRY=n
+CONFIG_SENSE_WHEEL_ODOMETRY_LOG_LEVEL_DBG=n
 
 # General config
 CONFIG_POSIX_API=y
@@ -52,6 +76,12 @@ CONFIG_NET_DEBUG_NET_PKT_ALLOC=y
 CONFIG_NET_CONFIG_NEED_IPV4=y
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+
+# SNTP
+CONFIG_SNTP=y
+CONFIG_NET_CONFIG_CLOCK_SNTP_INIT=y
+CONFIG_NET_CONFIG_SNTP_INIT_SERVER="192.0.2.2"
+CONFIG_NET_CONFIG_SNTP_INIT_TIMEOUT=5000
 
 # STATS
 CONFIG_THREAD_RUNTIME_STATS=y
