--- a/app/mrbuggy3/prj.conf
+++ b/app/mrbuggy3/prj.conf
@@ -15,7 +15,6 @@ CONFIG_ZBUS=y
 CONFIG_ZBUS_LOG_LEVEL_INF=y
 CONFIG_ZBUS_CHANNEL_NAME=y
 CONFIG_ZBUS_OBSERVER_NAME=y
-CONFIG_ZBUS_STRUCTS_ITERABLE_ACCESS=y
 
 CONFIG_SYNAPSE_ZBUS=y
 CONFIG_SYNAPSE_TOPIC=y
@@ -24,7 +23,7 @@ CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_SYNAPSE_PROTOBUF=y
 
 CONFIG_CONTROL_ACKERMANN=y
-
+CONFIG_CONTROL_ACKERMANN_LOG_LEVEL_DBG=n
 
 CONFIG_ESTIMATE_ROVER2D=y
 CONFIG_ESTIMATE_ROVER2D_LOG_LEVEL_DBG=n
@@ -79,10 +78,10 @@ CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
 # SNTP
-CONFIG_SNTP=y
-CONFIG_NET_CONFIG_CLOCK_SNTP_INIT=y
-CONFIG_NET_CONFIG_SNTP_INIT_SERVER="192.0.2.2"
-CONFIG_NET_CONFIG_SNTP_INIT_TIMEOUT=5000
+#CONFIG_SNTP=y
+#CONFIG_NET_CONFIG_CLOCK_SNTP_INIT=y
+#CONFIG_NET_CONFIG_SNTP_INIT_SERVER="192.0.2.2"
+#CONFIG_NET_CONFIG_SNTP_INIT_TIMEOUT=5000
 
 # STATS
 CONFIG_THREAD_RUNTIME_STATS=y
