--- a/app/rddrone/boards/native_posix.conf
+++ b/app/rddrone/boards/native_posix.conf
@@ -1,12 +1,20 @@
 CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_TEST_RANDOM_GENERATOR=y
-CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=200
 CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
+
+CONFIG_DREAM_SITL_LOG_LEVEL_DBG=n
 
 CONFIG_UART_NATIVE_POSIX_PORT_1_ENABLE=n
 
 CONFIG_DREAM_SITL=y
 CONFIG_SYNAPSE_ETHERNET=y
+
+# turn off driver interfaces, handled by dream
+CONFIG_SENSE_IMU=n
+CONFIG_SENSE_MAG=n
+CONFIG_SENSE_POWER=n
+CONFIG_SENSE_WHEEL_ODOMETRY=n
 
 CONFIG_NEWLIB_LIBC=n
 CONFIG_EXTERNAL_LIBC=y
