boards: native_posix: fix elm4, rddrone time.
Fix the use of posix time for rddrone and elm4.

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/elm4/boards/native_posix.conf
+++ b/app/elm4/boards/native_posix.conf
@@ -16,7 +16,7 @@ CONFIG_SENSE_MAG=n
 CONFIG_SENSE_POWER=n
 CONFIG_SENSE_WHEEL_ODOMETRY=n
 
-CONFIG_NEWLIB_LIBC=n
+CONFIG_NEWLIB_LIBC=y
 CONFIG_EXTERNAL_LIBC=y
 CONFIG_POSIX_API=n
-CONFIG_POSIX_CLOCK=y
+CONFIG_POSIX_CLOCK=n
