Update for zephyr main
Signed-off-by: James Goppert <james.goppert@gmail.com>
Co-authored-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/mrbuggy3/sample.yaml
+++ b/app/mrbuggy3/sample.yaml
@@ -7,4 +7,11 @@ common:
     - native_posix
     - vmu_rt1170
 tests:
-  mrbuggy3.default: {}
+  mrbuggy3.default:
+    tags:
+      - mrbuggy3
+    integration_platforms:
+      - native_posix
+      - vmu_rt1170
+
+
