--- a/app/rddrone/CMakeLists.txt
+++ b/app/rddrone/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(rddrone LANGUAGES C)
 
-target_compile_options(app PRIVATE -Wall -Wextra -Werror)
+target_compile_options(app PRIVATE -Wall -Wextra -Werror -Wno-unused-parameter)
 
 set(SOURCE_FILES
   src/main.c
