--- a/lib/sense/imu/Kconfig
+++ b/lib/sense/imu/Kconfig
@@ -10,6 +10,20 @@ menuconfig CEREBRI_SENSE_IMU
 
 if CEREBRI_SENSE_IMU
 
+config CEREBRI_SENSE_IMU_ACCEL_COUNT
+  int "Number of accelerometers"
+  default 1
+  range 1 4
+  help
+    Defines number of accelerometers 1-4
+
+config CEREBRI_SENSE_IMU_GYRO_COUNT
+  int "Number of gyroscopes"
+  default 1
+  range 1 4
+  help
+    Defines number of gyroscopes 1-4
+
 module = CEREBRI_SENSE_IMU
 module-str = sense_imu
 source "subsys/logging/Kconfig.template.log_config"
