--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -1,4 +1,4 @@
-CONFIG_CEREBRI_APP_NAME="mrbuggy3"
+CONFIG_CEREBRI_APP_NAME="b3rb"
 CONFIG_CEREBRI_CORE_COMMON=y
 CONFIG_CEREBRI_CONTROL_ACKERMANN=y
 CONFIG_CEREBRI_ESTIMATE_ROVER2D=y
