--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 3.13.1)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
-project(mrbuggy3 LANGUAGES C)
+project(b3rb LANGUAGES C)
 
 target_compile_options(app PRIVATE -Wall -Wextra -Werror -Wno-unused-parameter)
 
