Add k3 test case and cmake shield.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -6,6 +6,11 @@
 
 cmake_minimum_required(VERSION 3.13.1)
 
+if (${BOARD} STREQUAL "mr_canhubk3")
+  message(STATUS "enabling mr_canhubk3_adap shield")
+  set(SHIELD mr_canhubk3_adap)
+endif()
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(b3rb LANGUAGES C)
