Adding LED and INA.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/actuate/CMakeLists.txt
+++ b/lib/actuate/CMakeLists.txt
@@ -3,3 +3,4 @@
 add_subdirectory_ifdef(CONFIG_CEREBRI_ACTUATE_PWM pwm)
 add_subdirectory_ifdef(CONFIG_CEREBRI_ACTUATE_VESC_CAN vesc_can)
 add_subdirectory_ifdef(CONFIG_CEREBRI_ACTUATE_STATUS_LED status_led)
+add_subdirectory_ifdef(CONFIG_CEREBRI_ACTUATE_LED_ARRAY led_array)
