--- a/app/elm4/boards/native_posix.conf
+++ b/app/elm4/boards/native_posix.conf
@@ -10,6 +10,7 @@ CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
 CONFIG_CEREBRI_SENSE_UBX_GNSS=n
+CONFIG_CEREBRI_SENSE_SAFETY=n
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
 
 CONFIG_CEREBRI_DREAM_SITL_LOG_LEVEL_DBG=n
