Add lighting node.
Co-authored-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/mr_canhubk3.conf
+++ b/app/b3rb/boards/mr_canhubk3.conf
@@ -7,6 +7,8 @@ CONFIG_CEREBRI_SENSE_POWER=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=y
 CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 CONFIG_BUGGY3_MOTOR_ENB_REQUIRED=n
+CONFIG_LED_STRIP=y
+CONFIG_APA102_STRIP=y
 
 # steering
 CONFIG_CEREBRI_ACTUATE_PWM_USE_POS_0=y
