Add fsm subscription to ethernet.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/native_posix.conf
+++ b/app/b3rb/boards/native_posix.conf
@@ -10,6 +10,7 @@ CONFIG_CEREBRI_BOOT_BANNER=n
 CONFIG_CEREBRI_DREAM_SITL=y
 CONFIG_UBXLIB=n
 
+CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
