Add pwm enable.
Signed-off-by: James Goppert <james.goppert@gmail.com>
Co-authored-by: Benjamin Goppert <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/boards/mr_canhubk3.conf
+++ b/app/b3rb/boards/mr_canhubk3.conf
@@ -9,6 +9,7 @@ CONFIG_CEREBRI_SENSE_UBX_GNSS=y
 CONFIG_BUGGY3_MOTOR_ENB_REQUIRED=n
 CONFIG_LED_STRIP=y
 CONFIG_APA102_STRIP=y
+CONFIG_CEREBRI_SENSE_SAFETY=y
 
 # steering
 CONFIG_CEREBRI_ACTUATE_PWM_USE_POS_0=y
