--- a/lib/dream/sil/CMakeLists.txt
+++ b/lib/dream/sil/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(cerebri_dream_sitl)
+zephyr_library_named(cerebri_dream_sil)
 
 # we need to be able to include generated header files
 zephyr_include_directories()
@@ -16,6 +16,6 @@ zephyr_library_sources(
   zephyr_main.c
   )
 
-add_dependencies(cerebri_dream_sitl synapse_protobuf)
+add_dependencies(cerebri_dream_sil synapse_protobuf)
 
 # vi: ts=2 sw=2 et
