--- a/lib/dream/CMakeLists.txt
+++ b/lib/dream/CMakeLists.txt
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
-add_subdirectory_ifdef(CONFIG_CEREBRI_DREAM_SITL sitl)
+add_subdirectory_ifdef(CONFIG_CEREBRI_DREAM_SIL sil)
+add_subdirectory_ifdef(CONFIG_CEREBRI_DREAM_HIL hil)
