Update diffdrive to match ackermann. Use gyro in rover2d.
Updates diffdrive to match ackermann.

Also uses gyro for heading in rover2d estimator.

Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/elm4/boards/native_posix.conf
+++ b/app/elm4/boards/native_posix.conf
@@ -3,9 +3,15 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=200
 CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
 
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_NATIVE_UART_0_ON_STDINOUT=y
+#CONFIG_NATIVE_UART_AUTOATTACH_DEFAULT_CMD="xterm -fa Monospcae -fs 12 -fg grey -bg black -T cerebri-shell -e screen %s &"
+
+CONFIG_CEREBRI_BOOT_BANNER=n
 CONFIG_CEREBRI_DREAM_SIL=y
 CONFIG_UBXLIB=n
 
+CONFIG_CEREBRI_ACTUATE_LED_ARRAY=n
 CONFIG_CEREBRI_SENSE_IMU=n
 CONFIG_CEREBRI_SENSE_BARO=n
 CONFIG_CEREBRI_SENSE_MAG=n
@@ -14,6 +20,8 @@ CONFIG_CEREBRI_SENSE_SAFETY=n
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
 
 CONFIG_CEREBRI_DREAM_SIL_LOG_LEVEL_DBG=n
+CONFIG_CEREBRI_ESTIMATE_ROVER2D_LOG_LEVEL_DBG=y
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_LOG_LEVEL_DBG=n
 
 CONFIG_NEWLIB_LIBC=n
 CONFIG_EXTERNAL_LIBC=y
