--- a/app/elm4/prj.conf
+++ b/app/elm4/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_CEREBRI_APP_NAME="elm4"
 CONFIG_CEREBRI_CORE_COMMON=y
-CONFIG_CEREBRI_CONTROL_DIFFDRIVE=n
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE=y
 CONFIG_CEREBRI_ESTIMATE_ROVER2D=y
 CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY=n
 CONFIG_CEREBRI_SENSE_IMU=y
@@ -8,6 +8,19 @@ CONFIG_CEREBRI_SENSE_MAG=y
 CONFIG_CEREBRI_SYNAPSE_ZBUS=y
 CONFIG_CEREBRI_SYNAPSE_TOPIC=y
 CONFIG_CEREBRI_SYNAPSE_ETHERNET=y
+
+CONFIG_CEREBRI_ESTIMATE_ROVER2D_WHEEL_RADIUS_MM=108
+
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_GAIN_ALONG_TRACK=1000
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_MAX_VELOCITY_MM_S=1000
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_WHEEL_RADIUS_MM=108
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_WHEEL_BASE_MM=667
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_WHEEL_SEPARATION_MM=667
+CONFIG_CEREBRI_CONTROL_DIFFDRIVE_MAX_ANGULAR_VELOCITY_MRAD_S=1000
+
+CONFIG_LOG=y
+CONFIG_ASSERT=n
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 CONFIG_ASSERT=n
 
