--- a/lib/control/diffdrive/CMakeLists.txt
+++ b/lib/control/diffdrive/CMakeLists.txt
@@ -1,15 +1,19 @@
 # Copyright (c) 2023, CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_named(cerebri_control_diff_drive)
+zephyr_library_named(cerebri_control_diffdrive)
 
 
 # we need to be able to include generated header files
 zephyr_include_directories()
 
 zephyr_library_sources(
-  main.c
+  mixing.c
+  manual.c
+  fsm.c
+  velocity.c
+  position.c
   casadi/rover.c
   )
 
-add_dependencies(cerebri_control_diff_drive synapse_protobuf)
+add_dependencies(cerebri_control_diffdrive synapse_protobuf)
