--- a/app/b3rb/boards/native_posix.conf
+++ b/app/b3rb/boards/native_posix.conf
@@ -3,7 +3,8 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=200
 CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
 
-#CONFIG_NATIVE_UART_0_ON_STDINOUT=y
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_NATIVE_UART_0_ON_STDINOUT=y
 CONFIG_NATIVE_UART_AUTOATTACH_DEFAULT_CMD="xterm -fa Monospcae -fs 12 -fg grey -bg black -T cerebri-shell -e screen %s &"
 
 CONFIG_CEREBRI_BOOT_BANNER=n
