--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -1,5 +1,8 @@
 CONFIG_CEREBRI_APP_NAME="b3rb"
 
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
+CONFIG_TICKLESS_KERNEL=n
+
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
 CONFIG_CEREBRI_CONTROL_ACKERMANN=y
 CONFIG_CEREBRI_CORE_COMMON=y
