--- a/west.yml
+++ b/west.yml
@@ -14,12 +14,14 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: cognipilot
       url-base: https://github.com/CogniPilot
+    - name: ros2
+      url-base: https://github.com/ros2
 
   projects:
     - name: zephyr
       remote: cognipilot
       west-commands: scripts/west-commands.yml
-      revision: a7a080bf2e5175a1a3e26ac876a92d5c8268cf2f # qdec-tested 11/10/23
+      revision: ff310436a2c7f737fda04de85c7106ebb499e0fc # qdec-tested trgmux fix 11/25/23
       import:
         - name-allowlist:
           - nanopb
@@ -39,3 +41,31 @@ manifest:
       remote: cognipilot
       path: ubxlib
       revision: 10d8042b41a197228df32425f32c3d65f28bcf59 # zephyr-3.4-compile-fix 7/19/23
+    - name: rosidl
+      remote: cognipilot
+      path: modules/lib/rosidl
+      revision: 87b20f991b47089cbcc0d44d2bbce7dbc4e63bba # zephyr 11/24/23
+    - name: rcutils
+      remote: cognipilot
+      path: modules/lib/rcutils
+      revision: cc0f992b6f0a03cff0762877612d3d0aa86ff6f6 # zephyr 11/24/23
+    - name: rcl_interfaces
+      remote: cognipilot
+      path: modules/lib/rcl_interfaces
+      revision: dff2a510c07ae6420f90f3a3d5ae3df401f7e1d8 # zephyr 11/24/23
+    - name: unique_identifier_msgs
+      remote: cognipilot
+      path: modules/lib/unique_identifier_msgs
+      revision: cdaba5fd88877ac5360b8711e83a446bd9f71fea # zephyr 11/24/23
+    - name: common_interfaces
+      remote: cognipilot
+      path: modules/lib/common_interfaces
+      revision: 88bbf1737d75068f2464416d6ff43e732832b520 # zephyr 11/24/23
+    - name: cyclonedds
+      remote: cognipilot
+      path: modules/lib/cyclonedds
+      revision: 75cafdc7463ebb5443cfe9de96e6075ae510fe8e # zephyr 11/24/23
+    - name: aerial_msgs
+      remote: cognipilot
+      path: modules/lib/aerial_msgs
+      revision: bb1c89fd16e65f93dd8d47f27ded3512346bd44d # zephyr 11/24/23
