Updates for zephyr and ubxlib integration.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/b3rb/prj.conf
+++ b/app/b3rb/prj.conf
@@ -22,7 +22,7 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_SYNAPSE_PROTOBUF=y
 CONFIG_SYNAPSE_TINYFRAME=y
 CONFIG_NANOPB=y
-CONFIG_UBXLIB=y
+CONFIG_UBXLIB=n
 
 # Zbus
 CONFIG_ZBUS=y
