Initial sound and GNSS baud with M8/9/10 suppport.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/lib/actuate/Kconfig
+++ b/lib/actuate/Kconfig
@@ -7,5 +7,6 @@ rsource "pwm/Kconfig"
 rsource "vesc_can/Kconfig"
 rsource "status_led/Kconfig"
 rsource "led_array/Kconfig"
+rsource "sound/Kconfig"
 
 endmenu
