--- a/app/elm4/boards/vmu_rt1170.conf
+++ b/app/elm4/boards/vmu_rt1170.conf
@@ -1,6 +1,9 @@
 CONFIG_CEREBRI_DREAM_SIL=n
 CONFIG_CEREBRI_ACTUATE_PWM=y
 CONFIG_CEREBRI_ACTUATE_PWM_NUMBER=3
+CONFIG_CEREBRI_SENSE_POWER=y
+CONFIG_CEREBRI_SENSE_UBX_GNSS=y
+CONFIG_CEREBRI_ACTUATE_SOUND=n
 
 # can
 CONFIG_VESC_CAN=y
